--- a/Flugplatzfest Terminal/App.xaml
+++ b/Flugplatzfest Terminal/App.xaml
@@ -1,7 +1,12 @@
 ﻿<Application x:Class="Flugplatzfest_Terminal.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Padding" Value="10 5" />
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="Padding" Value="10 5" />
+        </Style>
     </Application.Resources>
 </Application>
