--- a/Flugplatzfest Terminal/App.xaml
+++ b/Flugplatzfest Terminal/App.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <Style TargetType="Button">
-            <Setter Property="Padding" Value="10 5" />
+            <Setter Property="Padding" Value="5 2.5" />
         </Style>
         <Style TargetType="TextBlock">
-            <Setter Property="Padding" Value="10 5" />
+            <Setter Property="Padding" Value="5 2.5" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Padding" Value="5 2.5" />
         </Style>
     </Application.Resources>
 </Application>
