--- a/Flugplatzfest Terminal/Views/Settings.xaml
+++ b/Flugplatzfest Terminal/Views/Settings.xaml
@@ -1,11 +1,52 @@
 ﻿<UserControl x:Class="Flugplatzfest_Terminal.Views.Settings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Flugplatzfest_Terminal.Views"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Text="Speisekarte" FontSize="24" />
+            <RichTextBox Grid.Row="1" />
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Content="Öffnen" />
+                <Button Grid.Column="1" Content="Speichern" />
+                <Button Grid.Column="2" Content="Übernehmen" />
+            </Grid>
+        </Grid>
+        <Grid Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" SharedSizeGroup="Settings" />
+                <RowDefinition Height="auto" SharedSizeGroup="Settings" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="0" Text="Einstellungen" FontSize="24" />
+            <TextBlock Text="Automatisch Antworten" Grid.Row="1" Grid.Column="1" />
+            <CheckBox Grid.Column="2" Grid.Row="1" Content="Aktiv" VerticalContentAlignment="Center" />
+            <TextBlock Grid.Column="0" Grid.Row="2" Text="Telegram Token" />
+            <TextBox Grid.Column="1" Grid.Row="2" VerticalContentAlignment="Center" />
+            <Button Grid.Column="2" Grid.Row="2" Content="Speichern" />
+        </Grid>
     </Grid>
 </UserControl>
