--- a/Flugplatzfest Terminal/Views/Terminal.xaml
+++ b/Flugplatzfest Terminal/Views/Terminal.xaml
@@ -19,26 +19,63 @@
         <TextBlock Grid.Row="0" Grid.Column="1" FontSize="24" Text="Chats" Margin="10" />
         <TextBlock Grid.Row="0" Grid.Column="2" FontSize="24" Text="Chat" Margin="10" />
         <ListView Grid.Row="1" Grid.Column="0"></ListView>
-        <ListView Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Chats}">
+        <ListView Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Chats, Mode=OneWay}" SelectedItem="{Binding SelectedChatViewModel, Mode=OneWayToSource}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalAlignment" Value="Stretch" />
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid HorizontalAlignment="Stretch">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="auto" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" />
+                        <TextBlock>
+                            <TextBlock.Style>
+                                <Style TargetType="TextBlock">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Incoming}" Value="True">
+                                            <Setter Property="Text" Value="&#x1F846;" />
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding Incoming}" Value="False">
+                                            <Setter Property="Text" Value="&#x1F844;" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+                        </TextBlock>
                         <TextBlock Grid.Column="1" Text="{Binding LastMessageText}" />
-                        <TextBlock Grid.Column="2" Text="{Binding DateTime}" />
+                        <TextBlock Grid.Column="2" Text="{Binding DateTime}" FontSize="10" VerticalAlignment="Bottom" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <Grid Grid.Row="1" Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <ListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" ItemsSource="{Binding Messages}">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <TextBox Grid.Column="0" Grid.Row="1" Text="{Binding SendMessageText, UpdateSourceTrigger=PropertyChanged}" />
+            <Button Content="Senden" Grid.Column="1" Grid.Row="1" Command="{Binding SendCommand}" />
+        </Grid>
     </Grid>
 </UserControl>
