Start implementing navigation

--- a/Flugplatzfest Terminal/Views/Settings.xaml
+++ b/Flugplatzfest Terminal/Views/Settings.xaml
@@ -5,48 +5,70 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Margin="10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="Speisekarte" FontSize="24" />
-            <RichTextBox Grid.Row="1" />
-            <Grid Grid.Row="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Content="Öffnen" />
-                <Button Grid.Column="1" Content="Speichern" />
-                <Button Grid.Column="2" Content="Übernehmen" />
-            </Grid>
-        </Grid>
-        <Grid Grid.Column="1">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" FlowDirection="RightToLeft">
+            <Button Content="Zurück" Command="{Binding}" />
+        </StackPanel>
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" SharedSizeGroup="Settings" />
-                <RowDefinition Height="auto" SharedSizeGroup="Settings" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <TextBlock Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="0" Text="Einstellungen" FontSize="24" />
-            <TextBlock Text="Automatisch Antworten" Grid.Row="1" Grid.Column="1" />
-            <CheckBox Grid.Column="2" Grid.Row="1" Content="Aktiv" VerticalContentAlignment="Center" />
-            <TextBlock Grid.Column="0" Grid.Row="2" Text="Telegram Token" />
-            <TextBox Grid.Column="1" Grid.Row="2" VerticalContentAlignment="Center" />
-            <Button Grid.Column="2" Grid.Row="2" Content="Speichern" />
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Text="Speisekarte" FontSize="24" />
+                <RichTextBox Grid.Row="1" />
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Content="Öffnen" />
+                    <Button Grid.Column="1" Content="Speichern" />
+                    <Button Grid.Column="2" Content="Übernehmen" />
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Text="Einstellungen" FontSize="24" />
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" SharedSizeGroup="Settings" />
+                        <RowDefinition Height="auto" SharedSizeGroup="Settings" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Rectangle Grid.ColumnSpan="3"
+                    Grid.Row="0"
+                    Stroke="Black"
+                    Fill="Transparent" />
+                    <Rectangle Grid.ColumnSpan="3"
+                    Grid.Row="1"
+                    Stroke="Black"
+                    Fill="Transparent" />
+                    <TextBlock Text="Automatisch Antworten" Grid.Row="0" Grid.ColumnSpan="2" Margin="0 5" />
+                    <CheckBox Grid.Column="2" Grid.Row="0" Content="Aktiv" VerticalContentAlignment="Center" Margin="0 5" IsChecked="True" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" Text="Telegram Token" Margin="0 5" />
+                    <TextBox Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" Margin="0 5" />
+                    <Button Grid.Column="2" Grid.Row="1" Content="Übernehmen" Margin="0 5" />
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
