--- a/Flugplatzfest Terminal/Views/Terminal.xaml
+++ b/Flugplatzfest Terminal/Views/Terminal.xaml
@@ -13,13 +13,17 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="0" FontSize="24" Text="Bestellungen" Margin="10" />
-        <TextBlock Grid.Row="0" Grid.Column="1" FontSize="24" Text="Chats" Margin="10" />
-        <TextBlock Grid.Row="0" Grid.Column="2" FontSize="24" Text="Chat" Margin="10" />
-        <ListView Grid.Row="1" Grid.Column="0"></ListView>
-        <ListView Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Chats, Mode=OneWay}" SelectedItem="{Binding SelectedChatViewModel, Mode=OneWayToSource}">
+        <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Horizontal" FlowDirection="RightToLeft">
+            <Button Content="&#x2699;" Command="{Binding NavigateSettingsCommand}" />
+        </StackPanel>
+        <TextBlock Grid.Row="1" Grid.Column="0" FontSize="24" Text="Bestellungen" Margin="10" />
+        <TextBlock Grid.Row="1" Grid.Column="1" FontSize="24" Text="Chats" Margin="10" />
+        <TextBlock Grid.Row="1" Grid.Column="2" FontSize="24" Text="Chat" Margin="10" />
+        <ListView Grid.Row="2" Grid.Column="0"></ListView>
+        <ListView Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Chats, Mode=OneWay}" SelectedItem="{Binding SelectedChatViewModel, Mode=OneWayToSource}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalAlignment" Value="Stretch" />
@@ -54,7 +58,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Grid Grid.Row="1" Grid.Column="2">
+        <Grid Grid.Row="2" Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
