--- a/Flugplatzfest Terminal/Views/Settings.xaml
+++ b/Flugplatzfest Terminal/Views/Settings.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" FlowDirection="RightToLeft">
-            <Button Content="Zurück" Command="{Binding}" />
+            <Button Content="Zurück" Command="{Binding NavigateBackCommand}" />
         </StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -25,7 +25,7 @@
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" Text="Speisekarte" FontSize="24" />
-                <RichTextBox Grid.Row="1" />
+                <TextBox Grid.Row="1" AcceptsReturn="True" AcceptsTab="True" Text="{Binding MenuString, UpdateSourceTrigger=PropertyChanged}" />
                 <Grid Grid.Row="3">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -34,7 +34,7 @@
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" Content="Öffnen" />
                     <Button Grid.Column="1" Content="Speichern" />
-                    <Button Grid.Column="2" Content="Übernehmen" />
+                    <Button Grid.Column="2" Content="Übernehmen" Command="{Binding UseMenuCommand}" />
                 </Grid>
             </Grid>
             <Grid Grid.Column="1">
