--- a/Flugplatzfest Terminal/MainWindow.xaml
+++ b/Flugplatzfest Terminal/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:viewModels="clr-namespace:Flugplatzfest_Terminal.ViewModels"
         xmlns:views="clr-namespace:Flugplatzfest_Terminal.Views"
         mc:Ignorable="d"
-        Title="Terminal" Height="450" Width="800">
+        Title="Terminal" Height="450" Width="800" WindowState="Maximized">
     <Grid>
         <Grid.Resources>
             <DataTemplate DataType="{x:Type viewModels:TerminalViewModel}">
