--- a/Flugplatzfest Terminal/Views/Terminal.xaml
+++ b/Flugplatzfest Terminal/Views/Terminal.xaml
@@ -71,10 +71,26 @@
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="HorizontalAlignment" Value="Stretch" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Incoming}" Value="True">
+                                <Setter Property="HorizontalContentAlignment" Value="Left" />
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding Incoming}" Value="False">
+                                <Setter Property="HorizontalContentAlignment" Value="Right" />
+                            </DataTrigger>
+                        </Style.Triggers>
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
                     <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="auto" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding Message}" />
+                            <TextBlock Grid.Column="1" Text="{Binding Time}" FontSize="10" VerticalAlignment="Bottom" />
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
