--- a/Flugplatzfest Terminal/Views/Terminal.xaml
+++ b/Flugplatzfest Terminal/Views/Terminal.xaml
@@ -23,7 +23,7 @@
         <TextBlock Grid.Row="1" Grid.Column="1" FontSize="24" Text="Chats" Margin="10" />
         <TextBlock Grid.Row="1" Grid.Column="2" FontSize="24" Text="Chat" Margin="10" />
         <ListView Grid.Row="2" Grid.Column="0"></ListView>
-        <ListView Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Chats, Mode=OneWay}" SelectedItem="{Binding SelectedChatViewModel, Mode=OneWayToSource}">
+        <ListView Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Chats}" SelectedItem="{Binding SelectedChatViewModel, Mode=OneWayToSource}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalAlignment" Value="Stretch" />
