--- a/Flugplatzfest Terminal/Views/Terminal.xaml
+++ b/Flugplatzfest Terminal/Views/Terminal.xaml
@@ -37,9 +37,8 @@
                             <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock VerticalAlignment="Center">
+                        <TextBlock>
                             <TextBlock.Style>
                                 <Style TargetType="TextBlock">
                                     <Style.Triggers>
@@ -54,8 +53,7 @@
                             </TextBlock.Style>
                         </TextBlock>
                         <TextBlock Grid.Column="1" Text="{Binding LastMessageText}" />
-                        <TextBlock Grid.Column="2" Text="{Binding InterfaceType}" />
-                        <TextBlock Grid.Column="3" Text="{Binding DateTime}" FontSize="10" VerticalAlignment="Bottom" />
+                        <TextBlock Grid.Column="2" Text="{Binding DateTime}" FontSize="10" VerticalAlignment="Bottom" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
