Relocated all MVVM to MVVM Folder

--- a/Flugplatzfest Terminal/MainWindow.xaml
+++ b/Flugplatzfest Terminal/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModels="clr-namespace:Flugplatzfest_Terminal.ViewModels"
+        xmlns:viewModels="clr-namespace:Flugplatzfest_Terminal.MVVM.ViewModels"
         xmlns:views="clr-namespace:Flugplatzfest_Terminal.Views"
         mc:Ignorable="d"
         Title="Terminal" Height="450" Width="800" WindowState="Maximized">
