--- a/Flugplatzfest Terminal/App.xaml
+++ b/Flugplatzfest Terminal/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="Flugplatzfest_Terminal.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Exit="Application_Exit">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="Padding" Value="5 2.5" />
