--- a/Flugplatzfest Terminal/MVVM/Views/Settings.xaml
+++ b/Flugplatzfest Terminal/MVVM/Views/Settings.xaml
@@ -55,11 +55,13 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Text="Element" />
-                    <TextBox Grid.Column="1" />
+                    <TextBox Grid.Column="1" Text="{Binding NewItemName, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock Grid.Column="2" Text="Preis" />
-                    <TextBox Grid.Column="3" Width="50" />
+                    <TextBox Grid.Column="3" Width="50" Text="{Binding NewItemPrice, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock Grid.Column="4" Text="€" />
                 </Grid>
                 <Grid Grid.Row="3">
                     <Grid.ColumnDefinitions>
@@ -67,8 +69,8 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Content="Hinzufügen" />
-                    <Button Grid.Column="1" Content="Entfernen" />
+                    <Button Grid.Column="0" Content="Hinzufügen" Command="{Binding AddMenuItemCommand}" />
+                    <Button Grid.Column="1" Content="Entfernen" Command="{Binding RemoveMenuItemCommand}" />
                     <Button Grid.Column="2" Content="Speichern" Command="{Binding SaveMenuCommand}" />
                 </Grid>
             </Grid>
