--- a/Flugplatzfest Terminal/MVVM/Views/Settings.xaml
+++ b/Flugplatzfest Terminal/MVVM/Views/Settings.xaml
@@ -37,14 +37,25 @@
                         <DataTemplate>
                             <Grid HorizontalAlignment="Stretch">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
                                     <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Grid.Column="0" Text="{Binding ItemName}" />
-                                <TextBlock Grid.Column="2" Text="{Binding Price}" />
-                                <TextBlock Grid.Column="3" Text="€" />
+                                <TextBlock Grid.Column="1">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Type}" Value="Food">
+                                                    <Setter Property="Text" Value="Essen" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                            <Setter Property="Text" Value="Getränk" />
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                                <TextBlock Grid.Column="3" Text="{Binding Price, StringFormat=C}" HorizontalAlignment="Right" />
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
@@ -56,12 +67,17 @@
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Text="Element" />
                     <TextBox Grid.Column="1" Text="{Binding NewItemName, UpdateSourceTrigger=PropertyChanged}" />
-                    <TextBlock Grid.Column="2" Text="Preis" />
-                    <TextBox Grid.Column="3" Width="50" Text="{Binding NewItemPrice, UpdateSourceTrigger=PropertyChanged}" />
-                    <TextBlock Grid.Column="4" Text="€" />
+                    <ComboBox Grid.Column="2" SelectedItem="{Binding SelectedMenuType}">
+                        <ComboBoxItem Content="Essen" Tag="Food" />
+                        <ComboBoxItem Content="Getränk" Tag="Drink" />
+                    </ComboBox>
+                    <TextBlock Grid.Column="3" Text="Preis" />
+                    <TextBox Grid.Column="4" Width="50" Text="{Binding NewItemPrice, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                    <TextBlock Grid.Column="5" Text="€" />
                 </Grid>
                 <Grid Grid.Row="3">
                     <Grid.ColumnDefinitions>
