--- a/Flugplatzfest Terminal/MainWindow.xaml
+++ b/Flugplatzfest Terminal/MainWindow.xaml
@@ -6,8 +6,16 @@
         xmlns:viewModels="clr-namespace:Flugplatzfest_Terminal.MVVM.ViewModels"
         xmlns:views="clr-namespace:Flugplatzfest_Terminal.Views"
         mc:Ignorable="d"
-        Title="Terminal" Height="450" Width="800" WindowState="Maximized">
+         Height="650" Width="1200"
+        Background="#36393F"
+        WindowStyle="None"
+        AllowsTransparency="True"
+        ResizeMode="CanResizeWithGrip">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
         <Grid.Resources>
             <DataTemplate DataType="{x:Type viewModels:TerminalViewModel}">
                 <views:Terminal />
@@ -16,6 +24,31 @@
                 <views:Settings />
             </DataTemplate>
         </Grid.Resources>
-        <ContentControl Content="{Binding CurrentViewModel}" />
+        <Border Background="#252525" MouseDown="Border_MouseDown">
+            <Grid HorizontalAlignment="Stretch">
+                <Label Content="Flugplatzfest Bestellungen" Foreground="Gray" FontWeight="SemiBold" />
+                <StackPanel Grid.Row="0" HorizontalAlignment="Right" Orientation="Horizontal">
+                    <Button Content="🗕"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        Foreground="Gray"
+                        FontWeight="Bold"
+                        Click="ButtonMinimize_Click" />
+                    <Button Content="🗖"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        Foreground="Gray"
+                        FontWeight="Bold"
+                        Click="ButtonMaximize_Click" />
+                    <Button Content="✕"
+                       Background="Transparent"
+                        BorderThickness="0"
+                        Foreground="Gray"
+                        FontWeight="Bold"
+                        Click="ButtonClose_Click" />
+                </StackPanel>
+            </Grid>
+        </Border>
+        <ContentControl Grid.Row="1" Content="{Binding CurrentViewModel}" />
     </Grid>
 </Window>
